2025-12-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/utils/pfbtops/pfbtops.c: Refactor.
	(error): Drop exit(3) call so that we can use this function for
	nonfatal errors or fatal ones that need to exit with a status
	other than `EXIT_FAILURE` (as with usage errors).
	(die): New function wraps `error()` and exit(3)s.
	(get_text, get_binary, main): Migrate callers from `error()` to
	`die()`.
	(error, usage): Explicitly cast unused return value of
	fprintf(3) to `void`.
	(main): Employ new strategies for construction of error
	diagnostics reporting unrecognized options.

2025-12-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	Handle unrecognized long option arguments better.

	* src/devices/grodvi/dvi.cpp (main):
	* src/devices/grohtml/post-html.cpp (main):
	* src/devices/grolbp/lbp.cpp (main):
	* src/devices/grolj4/lj4.cpp (main):
	* src/devices/grops/ps.cpp (main):
	* src/devices/grotty/tty.cpp (main):
	* src/preproc/eqn/main.cpp (main):
	* src/preproc/grn/main.cpp (main):
	* src/preproc/html/pre-html.cpp (main):
	* src/preproc/pic/main.cpp (main):
	* src/preproc/preconv/main.cpp (main):
	* src/preproc/soelim/main.cpp (main):
	* src/preproc/tbl/main.cpp (main):
	* src/roff/groff/groff.cpp (main):
	* src/roff/troff/input.cpp (main):
	* src/utils/hpftodit/hpftodit.cpp (main):
	* src/utils/indxbib/indxbib.cpp (main):
	* src/utils/lkbib/lkbib.cpp (main):
	* src/utils/lookbib/lookbib.cpp (main):
	* src/utils/pfbtops/pfbtops.c (main):
	* src/utils/tfmtodit/tfmtodit.cpp (main):
	* src/utils/xtotroff/xtotroff.c (main): When given an
	unrecognized long option, report what it was.

2025-12-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::description): Improve
	descriptiveness of C string returned when preprocessor symbol
	`NDEBUG` is defined and we're called upon to describe a
	nonexistent special character or class.

2025-12-05  G. Branden Robinson <g.branden.robinson@gmail.com>
